--- a/html/templates/header_infinity.html
+++ b/html/templates/header_infinity.html
@@ -38,7 +38,7 @@
 		<td valign='top'>
             <font size='2'><b>Текущие мейнтейнеры проекта:</b> <a href='https://github.com/infinitystation/Baystation12?tab=members'>-Буп-</a><br></font>
 			<font size='2'><b>Список активных участников репозитория:</b> <a href='https://github.com/infinitystation/Baystation12/graphs/contributors'>-Буп-</a><br></font>
-			<font size='2'><b>Кодеры:</b> Bear1ake, Sladkoeshka, Liners<br></font>
+			<font size='2'><b>Кодеры:</b> Bear1ake, Sladkoeshka, Liners, KareTa<br></font>
 			<font size='2'><b>Спрайтеры:</b> Temblrex, Kettenhund, TwinInDifferent <br></font>
 			<font size='2'><b>Мапперы:</b> Terror4000rus<br></font>
 			<font size='2'><b>Звуки:</b> Любой из предложивших<br></font>
