Оформление заголовка. Ссылка на нашу вики.

--- a/html/templates/header_infinity.html
+++ b/html/templates/header_infinity.html
@@ -36,14 +36,14 @@
 <table align='center' class="top">
 	<tr>
 		<td valign='top'>
-            <font size='2'><b>Текущие мейнтейнеры проекта: <a href='https://github.com/infinitystation/Baystation12?tab=members'>-Буп-</a><br></font>
-			<font size='2'><b>Список активных участников репозитория: <a href='https://github.com/infinitystation/Baystation12/graphs/contributors'>-Буп-</a><br></font>
-			<font size='2'><b>Кодеры: Bear1ake, Sladkoeshka, Liners, KareTa<br></font>
-			<font size='2'><b>Спрайтеры: Temblrex, Kettenhund, TwinInDifferent <br></font>
-			<font size='2'><b>Мапперы: Terror4000rus<br></font>
-			<font size='2'><b>Звуки: Любой из предложивших<br></font>
-			<font size='2'><b>Большое спасибо: Baystation 12, Eris-Station (CEV-Eris), Solaris Station 13, /tg/ station, Paradise Station, AuroraStation, Polaris Station, /vg/station, GoonStation devs, оригинальные разработчики Space Station 13 и Invisty за картинку в лобби (для англоязычного сообщества Baystation 12).<br> Также спасибо всем, кто внёс свой вклад, но не попал сюда. Если хотите попасть сюда, обратитесь в дискорд или на форум.</font>
-			<font size='2' color='red'><b><br>Нашли баг? Посетите наш багтрекер <a href="https://github.com/infinitystation/Baystation12/issues?labels=Bug&state=open">~Тюк~</a>.<br></font>
+            <font size='2'><b>Текущие мейнтейнеры проекта:</b> <a href='https://github.com/infinitystation/Baystation12?tab=members'>-Гиперссылка-</a><br></font>
+			<font size='2'><b>Список активных участников репозитория:</b> <a href='https://github.com/infinitystation/Baystation12/graphs/contributors'>-Гиперссылка-</a><br></font>
+			<font size='2'><b>Кодеры:</b> Bear1ake, Sladkoeshka, Liners, KareTa<br></font>
+			<font size='2'><b>Спрайтеры:</b> Temblrex, Kettenhund, TwinInDifferent <br></font>
+			<font size='2'><b>Мапперы:</b> Terror4000rus<br></font>
+			<font size='2'><b>Звуки:</b> Любой из предложивших<br></font>
+			<font size='2'><b>Большое спасибо:</b> Baystation 12, Eris-Station (CEV-Eris), Solaris Station 13, /tg/ station, Paradise Station, AuroraStation, Polaris Station, /vg/station, GoonStation devs, оригинальные разработчики Space Station 13 и Invisty за картинку в лобби (для англоязычного сообщества Baystation 12).<br> Также спасибо всем, кто внёс свой вклад, но не попал сюда. Если хотите попасть сюда, обратитесь в дискорд или на форум.</font>
+			<font size='2' color='red'><b><br>Нашли баг?</b> Посетите наш багтрекер <a href="https://github.com/infinitystation/Baystation12/issues?labels=Bug&state=open">-Гиперссылка-</a>.<br></font>
 		</td>
 	</tr>
 </table>
