--- a/nano/templates/supply.tmpl
+++ b/nano/templates/supply.tmpl
@@ -72,6 +72,14 @@
 	</div>
 	<div class="item">
 		<div class="itemLabel">
+			Credits from exported refined scrap:
+		</div>
+		<div class="itemContent">
+			{{:data.credits_refined_scrap}} Cr.
+		</div>
+	</div>
+	<div class="item">
+		<div class="itemLabel">
 			Credits from uploaded antibody data:
 		</div>
 		<div class="itemContent">
