Костыльное портирование мусорных кубов и переработчика мусора (#115)
* Костыльное портирование мусорных кубов и переработчика мусора

* Исправление оверлея апц и создание мусора

* И ещё фиксы

* Как это чинить...

* Последний фикс, наверное

* Ещё одно исправление но уже бэевских проблем

* Количество мусора зависит от веса уничтожаемого предмета

--- a/nano/templates/supply.tmpl
+++ b/nano/templates/supply.tmpl
@@ -80,6 +80,14 @@
 	</div>
 	<div class="item">
 		<div class="itemLabel">
+			Credits from exported refined scrap:
+		</div>
+		<div class="itemContent">
+			{{:data.credits_refined_scrap}} Cr.
+		</div>
+	</div>
+	<div class="item">
+		<div class="itemLabel">
 			Credit bonus for paperwork handling:
 		</div>
 		<div class="itemContent">
@@ -154,7 +162,7 @@
 		<div class="item">
 			<center><h3>Filled orders</h3></span>
 			<table style="width:100%">
-				<tr><th style="width:10%">ID<th style="width:25%">Requested item<th style="width:20%">Requested by<th style="width:20%">Reason<th style="width:10%">Cost<th style="width:15%">>Cost<th style="width:15%">Options
+				<tr><th style="width:10%">ID<th style="width:25%">Requested item<th style="width:20%">Requested by<th style="width:20%">Reason<th style="width:10%">Cost<th style="width:15%">Options
 				{{for data.done}}
 					<tr>
 					<td>{{:value.id}}
