--- a/html/templates/header_infinity.html
+++ b/html/templates/header_infinity.html
@@ -27,7 +27,7 @@
 			
 			<p><div align='center'><font size='3'><a href="http://wiki.baystation12.net/">Оригинальная Вики Baystation 12</a> | <a href="https://github.com/Baystation12/Baystation12/">Оригинальный код Baystation 12</a> | <a href="https://wiki.infinity-ss13.ru/">Наша Вики Baystation 12</a> | <a href="https://github.com/infinitystation/Baystation12/">Наш репозиторий</a></font></div></p>
             <font size='2'>Код лицезирован под <a href="http://www.gnu.org/licenses/agpl.html">AGPLv3</a>. Контент лицензирован под <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC BY-SA 3.0</a>.<br><br>
-			<font size='2'><b>Посетите наш сервер в дискорде: https://discord.gg/mn456xK </font>
+			<font size='2'><b>Посетите наш сервер в дискорде: https://discord.gg/N4atUkH </font>
 			</td>
 	</tr>
 </table>
